--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blog Template for Bootstrap</title>
+    <title>Single Page Applications</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="app/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
