using handlebar templates to display questions

--- a/index.html
+++ b/index.html
@@ -16,56 +16,10 @@
       <p class="lead">A simple SPA framework selection helper</p>
     </header>
     <div class="container">
-
-
       <div class="row">
-        <div class="col-sm-6">
 
-          <fieldset>
-            <legend>Client/User Environment</legend>
-            <ul>
-              <li>Interent vs. Intranet (Uncontrolled vs. Controlled | Trusted vs Untrusted)</li>
-              <li>Channel Coverage (Desktop, Smartphone, Tablets)</li>
-              <li>Connectivity (Speed of network connectivity)</li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend>User Interface</legend>
-            <ol>
-              <li>Standard UI elements vs. Custom UI elements</li>
-              <li>Data Push to clients</li>
-              <li>Handle large number of data elements</li>
-              <li>Validation support</li>
-              <li>Same UI metaphor across channels vs. Mobile First</li>
-            </ol>
-          </fieldset>
-          <fieldset>
-            <legend>Server Environment</legend>
-            <ol>
-              <li>Green field vs. Brown field</li>
-              <li>Service Interfaces (XML vs JSON, HTTP methods)</li>
-              <li>Isomorphic capability (Capability exists to execute code on server when needed, reuse models/validations)</li>
-            </ol>
-          </fieldset>
-          <fieldset>
-            <legend>Developer Support</legend>
-            <ol>
-              <li>Knowledge of working with Open Source Communities</li>
-              <li>Level of familiarity with Javascript </li>
-              <li>Tooling requirements</li>
-            </ol>
-          </fieldset>
-          <fieldset>
-            <legend>Application Needs</legend>
-            <ol>
-              <li>Size of possible codebase</li>
-              <li>Complexity of data entities invovled (model richness and attribute types)</li>
-              <li>SEO support</li>
-              <li>Modularity (functional modules, lazy load modules)</li>
-              <li>Embeddable / partial usage (portal or SSO)</li>
-              <li>Offline needs</li>
-            </ol>
-          </fieldset>
+        <div id="questions" class="col-sm-6">
+        </div>
 
       </div><!-- /.row -->
     </div><!-- /.container -->
