--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="container">
       <h1>SPA Framework Selection</h1>
-      <p class="lead">A simple SPA framework selection helper</p>
+      <p>A simple SPA framework selection helper</p>
     </header>
     <div class="container">
       <div class="row">
@@ -26,6 +26,15 @@
           </div>
         </div>
         <div id="right" class="col-sm-6">
+          <div class="form-group" role="group">
+            <button id="angular-js" class="btn" type="button">AngularJS <span class="badge"></span></button>
+            <button id="backbone-js" class="btn" type="button">BackboneJS<span class="badge"></span></button>
+            <button id="ember-js" class="btn" type="button">EmberJS<span class="badge"></span></button>
+            <button id="knockout-js" class="btn" type="button">KnockoutJS<span class="badge"></span></button>
+            <button id="meteor-js" class="btn" type="button">Meteor<span class="badge"></span></button>
+            <button id="ext-js" class="btn" type="button">ExtJS<span class="badge"></span></button>
+          </div>
+
         </div>
 
       </div><!-- /.row -->
