--- a/index.html
+++ b/index.html
@@ -22,19 +22,11 @@
       <div class="row">
 
         <div id="left" class="col-sm-6">
+          <div id="table"></div>
           <div class="panel-group" id="param-groups" role="tablist" aria-multiselectable="true">
           </div>
         </div>
         <div id="right" class="col-sm-6">
-          <div class="form-group" role="group">
-            <button id="angular-js" class="btn" type="button">AngularJS <span class="badge"></span></button>
-            <button id="backbone-js" class="btn" type="button">BackboneJS<span class="badge"></span></button>
-            <button id="ember-js" class="btn" type="button">EmberJS<span class="badge"></span></button>
-            <button id="knockout-js" class="btn" type="button">KnockoutJS<span class="badge"></span></button>
-            <button id="meteor-js" class="btn" type="button">Meteor<span class="badge"></span></button>
-            <button id="ext-js" class="btn" type="button">ExtJS<span class="badge"></span></button>
-          </div>
-
         </div>
 
       </div><!-- /.row -->
