adding bubble chart

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           </div>
         </div>
         <div id="right" class="col-sm-6">
+          <div id="radar-chart"></div>
+          <div id="bubble-chart"></div>
         </div>
 
       </div><!-- /.row -->
