adding grouped barchart linear-bubble-chart pending

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <div id="right" class="col-sm-6">
           <div id="radar-chart"></div>
           <div id="bubble-chart"></div>
+          <div id="linear-bubble-chart"></div>
+          <div id="grouped-bar-chart"></div>
         </div>
 
       </div><!-- /.row -->
