--- a/index.html
+++ b/index.html
@@ -22,15 +22,23 @@
       <div class="row">
 
         <div id="left" class="col-sm-6">
-          <div id="table"></div>
           <div class="panel-group" id="param-groups" role="tablist" aria-multiselectable="true">
           </div>
         </div>
         <div id="right" class="col-sm-6">
-          <div id="radar-chart"></div>
-          <div id="bubble-chart"></div>
-          <div id="linear-bubble-chart"></div>
-          <div id="grouped-bar-chart"></div>
+          <ul id="tabPane" class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#table">Table</a></li>
+            <li role="presentation"><a href="#radar-chart">Radar</a></li>
+            <li role="presentation"><a href="#bubble-chart">Bubble</a></li>
+            <li role="presentation"><a href="#grouped-bar-chart">Bars</a></li>
+          </ul>
+          <div id="tabContent" class="tab-content">
+            <div id="table" class="tab-pane active fade in"></div>
+            <div id="radar-chart" class="tab-pane fade"></div>
+            <div id="bubble-chart" class="tab-pane fade"></div>
+            <div id="linear-bubble-chart" class="tab-pane fade"></div>
+            <div id="grouped-bar-chart" class="tab-pane fade"></div>
+          </div>
         </div>
 
       </div><!-- /.row -->
