displaying accordion toggle state

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="container">
       <h1>SPA Framework Selection</h1>
-      <p>A simple SPA framework selection helper</p>
+      <p>A simple tool to help in the selection of a SPA (Single Page Application) framework. Parameters can be assigned a weight based on how important they are for evaluation and weights can also be assigned to inidividual sections.</p>
     </header>
     <div class="container">
       <div class="row">
