--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
           <div id="tabContent" class="tab-content">
             <div id="table" class="tab-pane active fade in"></div>
-            <div id="radar-chart" class="tab-pane fade"><small>Click on the legend item to toggle visibility</small></div>
+            <div id="radar-chart" class="tab-pane fade"></div>
             <div id="bubble-chart" class="tab-pane fade"></div>
             <div id="linear-bubble-chart" class="tab-pane fade"></div>
             <div id="grouped-bar-chart" class="tab-pane fade"></div>
