--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       </div><!-- /.row -->
     </div><!-- /.container -->
+    <footer class="container"></footer>
 
     <script data-main="app/main.js" src="app/vendor/requirejs/require.js"></script>
   </body>
