adding agpl logo in the footer and modifing blurb

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   </head>
 
   <body>
-    <header class="container">
-      <h1>SPA Framework Selection</h1>
-      <p>A simple tool to help in the selection of a SPA (Single Page Application) framework. Parameters can be assigned a weight based on how important they are for evaluation and weights can also be assigned to inidividual sections.</p>
+    <header class="jumbotron">
+      <div class="container">
+      <h1>SPA Framework Selection Tool</h1>
+      <p class="small">Selecting a SPA framework can be daunting given there are so many options out there. This tool is designed to help in the selection process of an SPA framework. The parameters used for selection organized at two levels. Importance of these parameters can be adjusted by using slider adjacent to each parameter, which changes its importance in the selection criteria.</p>
+      </div>
     </header>
     <div class="container">
       <div class="row">
@@ -43,7 +45,7 @@
 
       </div><!-- /.row -->
     </div><!-- /.container -->
-    <footer class="container"></footer>
+    <footer></footer>
 
     <script data-main="app/main.js" src="app/vendor/requirejs/require.js"></script>
   </body>
