--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Single Page Applications</title>
+    <title>SPA Framework Selection Tool</title>
 
     <link href="app/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="app/vendor/radar-chart-d3/src/radar-chart.css" rel="stylesheet"/>
