correctly displaying radar chart

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <li role="presentation"><a href="#table">Table</a></li>
           </ul>
           <div id="tabContent" class="tab-content">
-            <div id="table" class="tab-pane active fade in"></div>
-            <div id="radar-chart" class="tab-pane fade"></div>
+            <div id="table" class="tab-pane fade"></div>
+            <div id="radar-chart" class="tab-pane active fade in"></div>
             <div id="bubble-chart" class="tab-pane fade"></div>
             <div id="linear-bubble-chart" class="tab-pane fade"></div>
             <div id="grouped-bar-chart" class="tab-pane fade"></div>
