--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
         <div id="right" class="col-sm-6">
           <ul id="tabPane" class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#radar-chart">Radar</a></li>
+            <li role="presentation" class="active"><a href="#table">Table</a></li>
+            <li role="presentation"><a href="#radar-chart">Radar</a></li>
             <li role="presentation"><a href="#bubble-chart">Bubble</a></li>
             <li role="presentation"><a href="#grouped-bar-chart">Bars</a></li>
-            <li role="presentation"><a href="#table">Table</a></li>
           </ul>
           <div id="tabContent" class="tab-content">
-            <div id="table" class="tab-pane fade"></div>
-            <div id="radar-chart" class="tab-pane active fade in"></div>
+            <div id="table" class="tab-pane active fade in"></div>
+            <div id="radar-chart" class="tab-pane fade"></div>
             <div id="bubble-chart" class="tab-pane fade"></div>
             <div id="linear-bubble-chart" class="tab-pane fade"></div>
             <div id="grouped-bar-chart" class="tab-pane fade"></div>
